2000-06-19  Kenichi Handa  <handa@etl.go.jp>

	* ccl.h (struct ccl_program): New member eol_type.
	(struct ccl_spec): New member cr_carryover.

	* ccl.c (CCL_WRITE_CHAR): Convert NL according to ccl->eol_type.
	(setup_ccl_program): Initialize ccl->eol_type to CODING_EOL_LF.

	* coding.c (setup_coding_system) <4>: Reset member `cr_carryover'.
	(ccl_coding_driver): On encoding, initialize ccl->eol_type.
	(decode_eol_post_ccl): New function.
	(decode_coding): Don't detect EOL format here for CCL based coding
	systems.
	(decode_coding) <coding_type_ccl>: Handle carryovered CR.  Call
	decode_eol_post_ccl after running the CCL program.
	(code_convert_region): Don't detect EOL format here for CCL based
	coding systems.
	(decode_coding_string): Likewise.

2000-06-18  Ken Raeburn  <raeburn@gnu.org>

	* charset.c (update_charset_table): Use XINT on "iso_final_char"
	when treating it as an integer.

	* coding.h (encode_coding_string): Declare.

	* keyboard.c (read_key_sequence): Use XINT on "pos" when treating
	it as an integer.

	* keymap.c (Fwhere_is_internal): Rename argument "keymap" to
	"xkeymap" to avoid shadowing the "enum map_type" value that needs
	to be passed to get_local_map.

	* sound.c (Fplay_sound): Don't call make_number on
	Frun_hook_with_args count argument.

	* xterm.c (x_send_scroll_bar_event): Fudge lisp object/integer
	for lisp objects in X event structure data field, when lisp
	objects are represented with unions.
	(x_scroll_bar_to_input_event): Ditto.

2000-06-16  Ken Raeburn  <raeburn@gnu.org>

	* xdisp.c (decode_mode_spec): In "no_value" case, do NUL
	termination of string.  Fix sense of test whether
	Vline_number_display_limit is an integer.

2000-06-16  Gerd Moellmann  <gerd@gnu.org>

	* xfaces.c (syms_of_xfaces) [DEBUG_X_COLORS]: Defsubr dump_colors
	only if HAVE_X_WINDOWS.

	* keymap.c (describe_buffer_bindings): Add `\f\n' in front
	of titles.

	* dispnew.c (update_frame_1): Handle case that cursor vpos is 
	out of bounds.
